2011-08-09  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.c (ix86_emit_i387_round): New function.
	* config/i386/i386-protos.h (ix86_emit_i387_round): Declare.
	* config/i386/i386.md (round<mode>2): Use X87MODEF mode iterator.
	Use ix86_emit_i387_round to expand round function for i387 math.
	(lround<X87MODEF:mode><SWI248x:mode>2): Use X87MODEF mode iterator.
	Use ix86_emit_i387_round to expand {l,ll}round function for i387 math.

2011-08-09  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* config/sync.c: Move to ../libgcc.
	* Makefile.in (libgcc.mvars): Remove LIBGCC_SYNC, LIBGCC_SYNC_CFLAGS.
	* config/mips/t-libgcc-mips16 (LIBGCC_SYNC, LIBGCC_SYNC_CFLAGS):
	Remove.

2011-08-09  Anatoly Sokolov  <aesok@post.ru>

	* config/mmix/mmix.h (REGISTER_MOVE_COST): Remove macro.
	* config/mmix/mmix-protos.h (mmix_register_move_cost): Remove.
	* config/mmix/mmix.c (mmix_register_move_cost): Make static.
	Change 'from' and 'to' arguments type to reg_class_t.
	(TARGET_REGISTER_MOVE_COST): Define.

2011-08-09  Vladimir Makarov  <vmakarov@redhat.com>

	PR target/50026
	Revert:
	PR rtl-optimization/49990
	* ira-costs.c (print_allocno_costs, print_pseudo_costs): Don't
	ignore classes which can not change mode.
	(find_costs_and_classes): Ditto.

2011-08-09  Richard Guenther  <rguenther@suse.de>

	* tree-vrp.c (zero_nonzero_bits_from_vr): Also return precise
	information for ranges with only negative values.
	(extract_range_from_binary_expr_1): Adjust BIT_IOR_EXPR and
	BIT_AND_EXPR handling to handle ranges with negative values.

2011-08-09  Kirill Yukhin  <kirill.yukhin@intel.com>

       * config/i386/i386.c: Remove traling spaces.
       * config/i386/sse.md: Likewise.
       (*fma_fmadd_<mode>): Fix insn alternative 1 mnemonic.
       (*fma_fmsub_<mode>): Likewise.
       (*fma_fnmadd_<mode>): Likewise.
       (*fma_fnmsub_<mode>): Likewise.

2011-08-09  Nick Clifton  <nickc@redhat.com>

	* config/rx/rx.md: Disable extender peepholes at -O3.
